# battlecontrol

./: .clang-tidy  .gitignore  .swp  .yamllint  AGENT-FLOW.md  AGENTS.md  ARCH.md  BUILD-LINUX.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RELEASE.md  ROADMAP.md  TIM-824-smoke-test-report.md  WASM-SERVE.md  _headers  divergences.md  docker-compose.yml  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  preloader.js  ra.html  ra.js  ra.wasm  scripts.md  td.html  td.js  td.wasm  version.json  workflows.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: automerge.yml  ci.yml  gh-pages.yml  nightly.yml  release.yml  wasm-deploy.yml
.pi/extensions/: battlecontrol.ts
REDALERT/: 2KEYFRAM.CPP  ABSTRACT.H  AIRCRAFT.CPP  ANIM.CPP  AUDIO.CPP  BAR.H  BASE64.CPP  BENCH.H  BLOWFISH.H  BMP8.CPP  BUFF.H  BUILDING.CPP  BULLET.CPP  BULLET.H  CCFILE.CPP  CCINI.CPP  CCPTR.CPP  CCPTR.H  CDFILE.CPP  CELL.CPP  COMBAT.CPP  COMPAT.H  CONFDLG.CPP  CONNECT.CPP  CONQUER.CPP  COORD.CPP  CRATE.H  CRC.CPP  CRC.H  CREDITS.CPP  DDE.H  DEFINES.H  DIALOG.CPP  DISPLAY.CPP  DLLInterface.cpp  DLLInterface.h  DRIVE.CPP  DROP.H  EXTERNS.H  FACING.CPP  (+122 more)
REDALERT/WIN32LIB/: AUDIO.H  BUFFER.CPP  DDRAW.CPP  DDRAW.H  DELAY.CPP  DrawMisc.cpp  FONT.CPP  GBUFFER.CPP  GBUFFER.H  GETSHAPE.CPP  ICONSET.CPP  IFF.H  IRANDOM.CPP  LOAD.CPP  MISC.H  MONO.H  PALETTE.CPP  PALETTE.H  PLAYCD.H  RAWFILE.H  SHAPE.H  SOSDEFS.H  TILE.H  TIMER.H  TIMERINI.CPP  WINDOWS.CPP  WINHIDE.CPP  WRITEPCX.CPP  WWLIB32.H  WWMEM.H  WW_WIN.H  _DIPTABL.CPP  wwstd.h
TIBERIANDAWN/: ABSTRACT.H  AIRCRAFT.CPP  ANIM.H  AUDIO.CPP  BUILDING.H  BULLET.H  CCDDE.CPP  CDATA.CPP  CONNECT.H  CONQUER.CPP  COORD.CPP  DDE.CPP  DEFINES.H  DIALOG.CPP  DISPLAY.CPP  DLLInterface.cpp  ENDING.CPP  EXTERNS.H  FTIMER.H  FUNCTION.H  GSCREEN.CPP  GSCREEN.H  HELP.H  HOUSE.H  INFANTRY.CPP  INIT.CPP  INTERNET.CPP  IOMAP.CPP  IOOBJ.CPP  JSHELL.H  KEYFRAME.CPP  MENUS.CPP  MISSION.H  MIXFILE.CPP  MIXFILE.H  MiscAsm.cpp  OBJECT.H  PACKET.CPP  QUEUE.CPP  RADIO.H  (+12 more)
TIBERIANDAWN/WIN32LIB/: AUDIO.H  DDRAW.H  DESCMGMT.H  GBUFFER.H  MISC.H  SHAPE.H  SOUNDINT.H  WRITEPCX.CPP  WW_WIN.H
analysis/: aircraft-diagnostics.txt  aircraft-include-graph.txt  aircraft-prefix-diagnostics.md  conquer-diagnostics.txt  conquer-include-graph.txt  conquer-pass26-diagnostics.txt  conquer-pass26-include-graph.txt  conquer-pass26-prefix-diagnostics.md  pass25-histogram.txt  pass26-histogram.txt  pass27-histogram.txt  pass28-histogram.txt  pass29-C-histogram.txt  pass30-rvalue-histogram.txt
cmake/toolchains/: mingw32.cmake
docs/: codec-testing.md  debugging.md  emscripten-playbook.md  emscripten-port-checklist.md  lp64-audit.md  red-alert-run-modes.excalidraw  red-alert-run-modes.md  smoke-test-design-rule.md  wine-headless-rendering.md  wine-rendering-explainer.md
docs/tim709/: README.md  winclick.c
docs/tim719/: README.md
docs/tim724/: README.md  acceptance.md  findings-postpatch.md  findings-side-data-fix.md  findings-side-select-crash.md  findings-substrate.md  findings-tim747.md
e2e/: ra-gameplay-audit.spec.ts  ra-menu.spec.ts  td-gameplay.spec.ts  td-wasm-audit.spec.ts  tim515-audit.spec.ts  tim532-vqa-audit.spec.ts  tim537-click.spec.ts  tim538-audit.spec.ts  tim541-combat.spec.ts  tim542-wasm-audit.spec.ts  tim562-vqa-cinematic-audit.spec.ts  tim573-titlecard-verify.spec.ts  tim578-td-ghpages-audit.spec.ts  tim579-ghpages-frame20.spec.ts  tim580-local-verify.spec.ts  tim586-skip-cinematic.spec.ts  tim586-skip-keyboard.spec.ts  tim590-ghpages-cyan-verify.spec.ts  tim591-final-audit.spec.ts  tim600-diag.spec.ts  tim600-english-vqa-verify.spec.ts  tim601-prolog-audit.spec.ts  tim603-audio-pitch-probe.spec.ts  tim616-menu-english.spec.ts  tim621-pass74.spec.ts  tim649-parity-signoff.spec.ts  tim657-mouse-chrome.spec.ts  tim669-menu-click.spec.ts  tim670-td-audio-pitch.spec.ts  tim672-ra-click-mission-start.spec.ts  tim677-vqa-underrun-probe.spec.ts  tim687-core-elements.spec.ts  tim695-td-wasm-vqa.spec.ts  tim697-ra-campaign-complete.spec.ts  tim699-ra-compare.spec.ts  tim705-equivalence.spec.ts  tim708-wasm-allied-l1.spec.ts  tim710-wasm-parity.spec.ts  tim711-td-compare.spec.ts  tim723-td-cinematic.spec.ts  (+14 more)
e2e/cinematic-compare/: allied-l1-report.json
e2e/goldens/: README.md
e2e/regression/: README.md  T1-ra-wasm-boot.spec.ts  T10-ra-menu-bleed.spec.ts  T10-ra-wasm-post-game-menu.spec.ts  T11-ra-wasm-m2-boot.spec.ts  T12-td-wasm-m2-boot.spec.ts  T2-td-wasm-boot.spec.ts  T3-ra-wasm-menu.spec.ts  T3-td-wasm-menu.spec.ts  T4-ra-wasm-vqa.spec.ts  T5-ra-wasm-menu-click.spec.ts  T6-td-wasm-mission-start.spec.ts  T7-td-audio-pitch.spec.ts  T8-ra-audio-pitch.spec.ts  T9-ra-wasm-mission-start.spec.ts
e2e/report/: index.html
e2e/test-results/: .last-run.json
e2e/tim708/: notes.md
e2e/tim728/: notes.md
e2e/tim732/: notes.md
e2e/tim735/: notes.md
e2e/tim739/: notes.md
installer/: CMakeLists.txt  ra-installer.cpp
linux/: hello.cpp  td-win32-stubs.cpp  test_vqa_native.cpp
scripts/: _gating.sh  build-cage-headless.sh  build-cnc-ddraw.sh  build-native.sh  build-stub-thipx.sh  build-td.sh  build.sh  capture-checkpoint.py  capture-matrix.py  capture-native-sequence.py  capture-strip.py  capture-wine-sequence.py  cdlabel-patch.py  check.sh  ci-local.sh  ci-smoke-td.sh  ci-wasm-smoke.sh  cinematic-compare.py  cleanup.py  cnc-ddraw-tim740-scanline-double.patch  compare-frame-sequences.py  ddscl-patch.py  extract_mix.py  find-scenario-check-v2.sh  find-scenario-check.sh  first-compile-pass11.sh  first-compile-pass13.sh  first-compile-pass19.sh  first-compile-pass2.sh  first-compile-pass21.sh  first-compile-pass24.sh  first-compile-pass25.sh  first-compile-pass26.sh  first-compile-pass29.sh  first-compile-pass3.sh  first-compile-pass31-minmax.sh  first-compile-pass33.sh  first-compile-pass36.sh  first-compile-pass37.sh  first-compile-pass39.sh  (+211 more)
skills/: README.md
wasm/: nginx.conf  preloader.js  serve-assets.py  serve-coop.py  shell.html  td-shell.html  wasm-compat.h
(+313 files in other folders)
